# prdr

./: README.md
rust/prdr/: Cargo.toml
rust/prdr/crates/proto-dryb/: Cargo.toml
rust/prdr/crates/proto-dryb-derive/: Cargo.toml
rust/prdr/crates/proto-dryb-derive/src/: lib.rs
rust/prdr/crates/proto-dryb/benches/: log_serialization_benchmarks.rs  serialization_benchmarks.rs
rust/prdr/crates/proto-dryb/examples/: complex_nested_serialization.rs  custom_enum_serialization.rs  custom_struct_serialization.rs  primitive_serialization.rs
rust/prdr/crates/proto-dryb/src/: deserialize.rs  endian.rs  error.rs  lib.rs  serialize.rs
rust/prdr/crates/proto-dryb/tests/: integration_tests.rs
