[package]
name = "proto-dryb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-dryb-derive = { path = "../proto-dryb-derive" }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "primitive_serialization"
path = "examples/primitive_serialization.rs"

[[example]]
name = "custom_struct_serialization"
path = "examples/custom_struct_serialization.rs"

[[example]]
name = "complex_nested_serialization"
path = "examples/complex_nested_serialization.rs"
