[package]
name = "proto-dryb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-dryb-derive = { path = "../proto-dryb-derive" }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "primitive_serialization"

[[example]]
name = "custom_struct_serialization"

[[example]]
name = "complex_nested_serialization"

[[example]]
name = "custom_enum_serialization"

[[bench]]
name = "serialization_benchmarks"
harness = false
